--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     }
   ],
   "require": {
+    "php": ">=7.3",
     "twig/twig": "^3.0",
     "funcphp/twig-compress": "dev-master",
     "ext-pdo": "*",
