--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "joechark/hyper-php",
+  "name": "joecharika/hyper-php",
   "type": "library",
   "description": "Hyper, fast MVC framework for PHP",
   "keywords": [
